tests/core/ill-typed/not-a-function/applying-non-function-1.stella
language core;

fn main(f : Nat) -> Nat {
  return f(f);
}